--- a/index.html
+++ b/index.html
@@ -1,218 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>File Sample</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta charset="utf-8">
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+<script type="text/javascript">
 
-	<link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
-	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
-	<link href="styles/main.css" rel="stylesheet" type="text/css" />
+language = navigator.language.split("-"); 
+	language_root = (language[0]);
 
-	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-	
+	console.log(language_root);
+	alert(language_root);
 
-</head>
-<body onload="init();" >
-
-	<!-- ////////////// Campingplaetze Liste /////////////////////////////////////////////////////////////////// -->
-
-	<div data-role="page" id="home" data-theme="b">
-		<div data-role="header">
-			<h2  id="lng_camping">Campingpl&auml;tze</h2>
-		</div>
-		<div data-role="content">
-			<div class="header"><img src="img/logo.png"></div>
-			<div class="header_text">Campingpl&auml;tze S&uuml;dtirol</div>
-			<ul data-role="listview" data-filter="false" id="campingplatzelist" data-theme="a" data-inset="true" data-filter-placeholder="Campingplätze Finden" data-autodividers="true">
-			</ul>
-		</div>
-		<footer data-role="footer" data-position="fixed" data-theme="b">
-			<nav data-role="navbar" data-iconpos="left">
-				<ul>
-					<li><a href="#home" data-icon="home">Home</a></li>
-					<li><a href="#services-page" data-icon="info">Service</a></li>
-				</ul>
-			</nav>
-		</footer>
-	</div>
-
-
-	<!-- ////////////// Legende /////////////////////////////////////////////////////////////////// -->
-
-	<!--div data-role="page" id="legende-page" data-theme="b">
-		<div data-role="header">
-			<h1>Legende</h1>
-			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
-		</div>
-		<div data-role="content">
-			<img src='img/eq/1.gif'> Gras oder Erdboden<br />
-			<img src='img/eq/2.gif'> Wenig Schatten durch Bäume<br />
-			<img src='img/eq/3.gif'> Guter Schatten durch Bäume<br />
-			<img src='img/eq/4.gif'> Stromanschluß für Caravans mit Voltangabe<br />
-			<img src='img/eq/5.gif'> Einheiten (Caravans und Zelte)<br />
-			<img src='img/eq/6.gif'> Duschen<br />
-			<img src='img/eq/7.gif'> Gasversorgung<br />
-			<img src='img/eq/8.gif'> Ausguß für Chemikaltoiletten<br />
-			<img src='img/eq/9.gif'> Trockenhaube<br />
-			<img src='img/eq/10.gif'> Kinderspielplatz<br />
-			<img src='img/eq/11.gif'> Beheizbare Sanitäranlagen<br />
-			<img src='img/eq/12.gif'> Stromanschlüsse für Rassierapparat<br />
-			<img src='img/eq/13.gif'> Geschirrspülbecken<br />
-			<img src='img/eq/14.gif'> Wäschewaschbecken<br />
-			<img src='img/eq/15.gif'> Platzbeleuchtung vorhanden<br />
-			<img src='img/eq/16.gif'> Lebensmittel<br />
-			<img src='img/eq/17.gif'> Imbiss<br />
-			<img src='img/eq/18.gif'> Gaststätte<br />
-			<img src='img/eq/19.gif'> Waschräume nach Geschlechtern getrennt<br />
-			<img src='img/eq/20.gif'> Tankstelle bei Camping<br />
-			<img src='img/eq/21.gif'> Trockner<br />
-			<img src='img/eq/22.gif'> Eislaufplatz<br />
-			<img src='img/eq/23.gif'> Kunsteislaufplatz<br />
-			<img src='img/eq/24.gif'> Toiletten mit Wasserspülung<br />
-			<img src='img/eq/25.gif'> Fußwaschbecken<br />
-			<img src='img/eq/26.gif'> Skieinstellraum<br />
-			<img src='img/eq/27.gif'> Seestrand<br />
-			<img src='img/eq/28.gif'> Accès handicapés<br />
-			<img src='img/eq/29.gif'> Kinder-/Jugendzimmer<br />
-			<img src='img/eq/30.gif'> Bibliothek<br />
-			<img src='img/eq/31.gif'> Skilift<br />
-			<img src='img/eq/32.gif'> Langlaufloipe<br />
-			<img src='img/eq/33.gif'> Boccia<br />
-			<img src='img/eq/34.gif'> Fitneßraum<br />
-			<img src='img/eq/35.gif'> Bungalows oder Appartments<br />
-			<img src='img/eq/36.gif'> Planschbecken<br />
-			<img src='img/eq/37.gif'> Mietcaravan<br />
-			<img src='img/eq/38.gif'> Minigolf<br />
-			<img src='img/eq/39.gif'> Diskothek<br />
-			<img src='img/eq/40.gif'> Kegelbahn<br />
-			<img src='img/eq/41.gif'> Tischtennis<br />
-			<img src='img/eq/42.gif'> Tennis<br />
-			<img src='img/eq/43.gif'> Reitmöglichkeit<br />
-			<img src='img/eq/44.gif'> Sauna<br />
-			<img src='img/eq/45.gif'> Dampfbad<br />
-			<img src='img/eq/46.gif'> Fernsehraum<br />
-			<img src='img/eq/47.gif'> Solarium<br />
-			<img src='img/eq/48.gif'> Whirlpool<br />
-			<img src='img/eq/49.gif'> Waschmaschine<br />
-			<img src='img/eq/50.gif'> Badegelegenheit auch für Kinder im offenen Gewässer<br />
-			<img src='img/eq/51.gif'> Schwimmbecken<br />
-			<img src='img/eq/52.gif'> Hallenbad<br />
-			<img src='img/eq/53.gif'> Verleih von Ruderbooten der sonstigen Booten<br />
-			<img src='img/eq/54.gif'> Höhe über dem Meer<br />
-			<img src='img/eq/55.gif'> Gesamtfläche<br />
-			<img src='img/eq/56.gif'> Sanitärkabinen, die gemietet werden können<br />
-			<img src='img/eq/57.gif'> Enteehrungsstation für Wohnmobil-Abwassertanks<br />
-			<img src='img/eq/58.gif'> Entleehrung für Abwasser- und Fäkaltanks<br />
-			<img src='img/eq/59.gif'> Gasanschlüsse<br />
-			<img src='img/eq/60.gif'> Satelitenanlage<br />
-			<img src='img/eq/61.gif'> Abwasser-/Frischwasseranschlüsse<br />
-			<img src='img/eq/62.gif'> Imbisstube oder Imbissstand<br />
-			<img src='img/eq/63.gif'> Umweltorientierte Betriebsführung<br />
-			<img src='img/eq/64.gif'> Internet<br />
-			<img src='img/eq/65.gif'> Öffentliche Verkehrsmittel in der Nähe<br />
-			<img src='img/eq/66.gif'> Einzelwaschkabinen<br />
-			<img src='img/eq/67.gif'> Campinplatz mit herausragendem Ergebnis bei der ADAC-Inspektion<br />
-		</div>
-		<footer data-role="footer" data-position="fixed" data-theme="b">
-			<nav data-role="navbar" data-iconpos="left">
-				<ul>
-					<li><a href="#home" data-icon="home">Home</a></li>
-					<li><a href="#services-page" data-icon="info">Service</a></li>
-				</ul>
-			</nav>
-		</footer>
-	</div-->
-
-
-
-	<!-- ////////////// Details /////////////////////////////////////////////////////////////////// -->
-
-	<div data-role="page" id="campingplaetzedetails-page" data-theme="b">
-		<div data-role="header">
-			<h1>Details</h1>
-			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
-		</div>
-		<div data-role="content">
-			
-		</div>
-		<footer data-role="footer" data-position="fixed" data-theme="b">
-			<nav data-role="navbar" data-iconpos="left">
-				<ul>
-					<li><a href="#home" data-icon="home">Home</a></li>
-					<li><a href="#services-page" data-icon="info">Service</a></li>
-				</ul>
-			</nav>
-		</footer>
-	</div>
-
-
-	<!-- ////////////// Services /////////////////////////////////////////////////////////////////// -->
-
-
-	<div data-role="page" id="services-page" data-theme="b">
-		<div data-role="header">
-			<h2>Service</h2>
-			<a href="#home" data-icon="back" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Back</a>
-		</div>
-		<div data-role="content">
-			<div data-role="collapsible-set" >
-				<div data-role="collapsible" data-expanded-icon="info">
-					<h2>Impressum</h2>
-					<p>
-						<h3>VCS Vereinigung der Campingplatzbetreiber Südtirols</h3>
-						MwSt.Nr und Steuernr. / Cod. Fisc. + Part. IVA : 01701300210<br />
-						info@campingsuedtirol.com<br />
-						I-39100 Bozen/Bolzano<br />
-						Moritzinger Weg 83/Via S. Maurizio 83
-					</p>
-				</div>
-				<div data-role="collapsible" data-expanded-icon="info">
-					<h2>Partner</h2>
-					<p>
-						<ul data-role="listview">
-							<li data-mini="true"><a rel="external" href="http://www.derfreistaat.de/" target="_blank">www.derfreistaat.de</a></li>
-							<li data-mini="true"><a rel="external" href="http://www.glueck-freizeitmarkt.de/" target="_blank">www.glueck-freizeitmarkt.de</a></li>
-						</ul>
-					</p>
-				</div>
-				<div data-role="collapsible" data-expanded-icon="info">
-					<h2>Weitere Services</h2>
-					<p>
-						<ul data-role="listview">
-							<li data-mini="true"><a rel="external" href="http://www.sentres.com/de/suedtirol" target="_blank">Sentres S&uuml;dtirol</a></li>
-							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/wetter/" target="_blank">Wetter</a></li>
-							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/vmz/report/index_d.asp" target="_blank">Verkehr</a></li>
-							<li data-mini="true"><a rel="external" href="http://www.youtube.com/watch?v=g5V3mJEE6bw" target="_blank">Film</a></li>
-						</ul>
-					</p>
-				</div>
-			</div>
-			<input id="update" type="button" value="Update" data-icon="refresh" style="width: 100%;text-align:left" />
-			<div data-role="navbar">
-			    <ul>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 0 );window.location='index.html';">DE</a></li>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 1 );window.location='index.html';">EN</a></li>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 3 );window.location='index.html';">IT</a></li>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 6 );window.location='index.html';">NL</a></li>
-			    </ul>
-			</div>
-		</div>
-
-		<footer data-role="footer" data-position="fixed" data-theme="b">
-			<nav data-role="navbar" data-iconpos="left">
-				<ul>
-					<li><a href="#home" data-icon="home">Home</a></li>
-					<li><a href="#services-page" class="ui-btn-active ui-state-persist" data-icon="info">Service</a></li>
-				</ul>
-			</nav>
-		</footer>
-	</div>
-	
-	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
-	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
-	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
-	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
-
-</body>
-</html>
+</script>
